--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -9,3 +9,12 @@ body{
     float: right;
     margin-bottom:15px ;
 }
+.media-object{
+    width: 38px;
+    height: 38px;
+}
+.text-description{
+    font-size: 12px;
+    font-weight: normal;
+    color: #999;
+}
